@@ -1,3 +1,8 @@
+2010-10-26  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/misc.c (parse_fillstyle):  Allow "border" as a keyword without
+	necessarily having an immediately following linetype or color.
+
 2010-10-23  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* configure.in: The AC_CHECK_LIB macro apparently always appends
